Fix whitespace and useless image call

--- a/static/css/landing_css/style.css
+++ b/static/css/landing_css/style.css
@@ -565,7 +565,6 @@ h5.subtitle {
 }
 
 .banner-1 {
-  background: url("../images/banner/bg-2.jpg");
   background-size: cover;
   position: relative;
 }
